hphp/test/slow/parser/closure_return_types_both_places.php.expectf

Fatal error: Cannot have return types both before and after use clause in %s on line 6
